--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Mealer">
-        <activity android:name=".UI.Activities.HomeActivity"></activity>
-        <activity android:name=".UI.Activities.MainActivity">
+        <activity android:name=".UI.Activities.UserInfoForm"></activity>
+        <activity android:name=".UI.Activities.HomeActivity" />
+        <activity
+            android:name=".UI.Activities.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
