--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Mealer">
-        <activity android:name=".UI.Activities.UserInfoForm"></activity>
+        <activity android:name=".UI.Activities.UserInfoForm" />
         <activity android:name=".UI.Activities.HomeActivity" />
         <activity
             android:name=".UI.Activities.MainActivity"
