--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Mealer">
         <activity android:name=".UI.Activities.UserInfoForm" />
+        <activity android:name=".UI.Activities.SignInActivity" />
         <activity android:name=".UI.Activities.HomeActivity" />
         <activity
             android:name=".UI.Activities.MainActivity"
