--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Mealer">
+        <activity android:name=".UI.Activities.ComplaintActivity" />
         <activity android:name=".UI.Activities.ChooseUserTypeActivity" />
         <activity android:name=".UI.Activities.UserSignUpFormActivity" />
         <activity android:name=".UI.Activities.ChefSignUpFormActivity" />
