--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Mealer">
         <activity android:name=".UI.Activities.ComplaintActivity" />
+        <activity android:name=".UI.Activities.RecipeActivity" />
         <activity android:name=".UI.Activities.ChooseUserTypeActivity" />
         <activity android:name=".UI.Activities.UserSignUpFormActivity" />
         <activity android:name=".UI.Activities.ChefSignUpFormActivity" />
