--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,12 +30,17 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    packagingOptions {
+        resources.excludes.add("META-INF/*")
+    }
 }
 
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.preference:preference:1.2.0'
+    implementation 'com.google.firebase:firebase-messaging:23.1.0'
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
@@ -55,4 +60,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-storage'
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+
+    // Send notifications to users
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    implementation 'com.google.auth:google-auth-library-oauth2-http:1.13.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+
 }
