--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Mealer">
-        <activity
-            android:name=".ProfilView"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
+        <activity android:name=".UI.Activities.ProfileActivity" />
         <activity android:name=".UI.Activities.ComplaintActivity" />
         <activity android:name=".UI.Activities.OrderPageActivity" />
         <activity android:name=".UI.Activities.RecipeActivity" />
